--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -21,10 +21,13 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="articles" routerLinkActive="active">Articles</a>
+      </li>
     </ul>
   </div>
 </nav>
 
-<div class="container">
-  <router-outlet></router-outlet>
+<div class="container" [@routeAnimation]="getAnimationData(routerOutlet)">
+  <router-outlet #routerOutlet="outlet"></router-outlet>
 </div>
